# bipp-datasets

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
libs/wasabi/: README.md  pyproject.toml
libs/wasabi/bipp/wasabi/: wasabi_auth.py  wasabi_download.py  wasabi_keys.cfg  wasabi_upload.py
libs/wasabi/tests/: test_wasabi.py
projects/1_dealer_data/: README.md  pyproject.toml
projects/agcensus/: README.md  e.csv  pyproject.toml
projects/agcensus/src/data/: Tehsil_level.py  aggregatedata.py  functions.py  groupby.py
projects/bihar-nhb/: README.md  pyproject.toml
projects/bihar-nhb/notebooks/: parsed_2016_bihar_nhb_.csv  parsing_2016_bihar_nhb.ipynb  parsing_2016_bihar_nhb.py
projects/bihar-nhb/src/data/: #sample file for git push.py  sample.py
projects/cmie-consumer-pyramids/: README.md  pyproject.toml
projects/cmie-consumer-pyramids/reports/: Appending of CMIE consumer pyramids data (Sep 2020 to Aug 2021 ).docx
projects/cmie-consumer-pyramids/src/data/: data_check.py  subsetting_appending_data.py
projects/crop-diversification/: README.md  pyproject.toml
projects/crop-diversification/notebooks/: agcensus.py  null_mapping_15.py
projects/crop-diversification/src/visualization/: practice.py  visualize.py  visualize2.py  visualize_10_11.py
projects/fertilizer-mis/: README.md  pyproject.toml  temp.html
projects/fertilizer-mis/notebooks/2_dealer_data/: data_cleaning.ipynb  data_creation.ipynb  eda_of_dealer_data.ipynb
projects/fertilizer-project/: README.md  pyproject.toml
projects/fertilizer-project/src/data/: iterate_print_path.py
projects/form20/: README.md  pyproject.toml
projects/form20/src/data/: get_pc_ac_master_list.py  get_raw_data.py  get_raw_data_req.py  pdf_parse.py
projects/formal_employment/: .gitignore  README.md  pyproject.toml
projects/formal_employment/notebooks/: EPF_files_extract.ipynb  camelot_epfo.py  consolidate.ipynb  extract_epfo.ipynb  extract_payroll.ipynb  upload_to_wasabi.ipynb
projects/formal_employment/src/data/: get_payroll_reports.py
projects/fpo/: README.md  pyproject.toml
projects/fpo/notebooks/: fpo_date.ipynb  lgd_mapping.ipynb  lgd_mapping_non_sfac.ipynb  lgd_mapping_sfac.ipynb
projects/fpo/src/data/: fpo_date.py  fpo_scraping_processing.py  lgd_mapping_non_sfac.py  lgd_mapping_sfac.py
projects/groundwater/: README.md  pyproject.toml
projects/groundwater-data/: README.md  pyproject.toml
projects/groundwater-data/src/data/: District_LGD_Code.json  State_LGD_Code.json  data_consolidation.py  data_consolidation_final.py  get_raw_data.py
projects/groundwater/src/data/: data_impute.py  gw_analysis.py  imputed_gw.ipynb  imputed_gw_analysis.py  imputed_gw_plotly.py  rows_count_file.csv  rows_count_filedd.xlsx
projects/land-livestock/: README.md  pyproject.toml
projects/land-livestock/notebooks/: buffalo_cleaning.ipynb  cattle_cleaning.ipynb  goat_cleaning.ipynb  lgd_mapping.ipynb  lgd_mapping_buffalo.ipynb  lgd_mapping_cattle.ipynb  lgd_mapping_goat.ipynb  lgd_mapping_pig.ipynb  lgd_mapping_sheep.ipynb  pig_cleaning.ipynb
projects/land-livestock/src/data/: buffalo_cleaning.py  cattle_cleaning.py  goat_cleaning.py  lgd_mapping.py  lgd_mapping_buffalo.py  lgd_mapping_cattle.py  lgd_mapping_goat.py  lgd_mapping_pig.py  lgd_mapping_sheep.py  pig_cleaning.py
projects/nddb/: README.md  lgd_mapping.ipynb  pyproject.toml
projects/nddb/notebooks/: lgd_mapping.ipynb
projects/nddb/src/data/: lgd_mapping.py
projects/nhb/: README.md  pyproject.toml
projects/nhb/reports/: Implementation Process.docx
projects/nhb/src/data/: nhb_collated_states_script.py
projects/nrega-impact/: README.md  pyproject.toml
projects/nrega-impact/devanagiri/: scrapy.cfg
projects/nrega-impact/devanagiri/devanagiri/: items.py  middlewares.py  pipelines.py  settings.py
projects/nrega-impact/helper_files/: block_lgd_index.csv  devanagiri.csv  devanagiri.json  english.json
projects/nrega-impact/reports/: Codes Document.docx  Data Wrangling Documentation.docx  LGD Mapping.docx  Order of Implementation.docx  Unicode Dictionary Documentation.docx  nrega_assets_investments_code_book.xlsx  ~$ta Wrangling Documentation.docx
projects/nrega-impact/src/data/: JK_to_LADAKH.py  TN_cleaning.py  column_mutate_reversor_election_states.py  lgd_iterator.py  lgd_mapping.py  nrega_assets_cleaning_append.py  panchayat_lgd_iterator.py  panchayat_lgd_iterator_test2.py  panchayat_lgd_iterator_test3_using_file from_GSD.py  panchayat_lgd_mapping_test1.py  panchayat_lgd_mapping_without_fuzzy.py  panchayat_mapping.ipynb  renaming_files.py  state_interim_data_create.py  state_interim_to_processed.py  test1.py  unicode_english_transliteration.py  up_panchayat_mapping.ipynb  utrk_panchayat_mapping.ipynb
projects/nrlm/: README.md  agrinutri_scraper.py  agrinutri_scraper_name.py  pyproject.toml  test.py
projects/nrlm-f1b-scraper/: README.md  pyproject.toml
projects/nrlm-f1b-scraper/src/data/: f1b_data_scraper.py  f1b_name_scraper.py  json_flat.py
projects/nrlm-farm-live/: README.md  pyproject.toml
projects/nrlm-farm-live/reports/: Readme for name_scraper_test.txt
projects/nrlm-farm-live/src/data/: block_lgd_mapper.py  data_compiler.py  district_lgd_mapper.py  fl2_name_scraper.py  fl2_name_scraper_outdated.py  (+7 more)
projects/nrlm-shg-f1b/: README.md  pyproject.toml
projects/nrlm-shg-f1b-mod/: README.md  pyproject.toml
projects/nrlm-shg-f2b/: README.md  pyproject.toml
projects/nrlm-shg-f2c/: README.md  pyproject.toml
projects/nrlm-shg-funds/: README.md  pyproject.toml
projects/nrlm-shg-funds/references/: Scraping Process Readme.docx
projects/nrlm-shg-g3/: README.md  pyproject.toml
projects/nrlm/notebooks/: agri_nutri_name_scraper.ipynb  agri_nutri_scraper.ipynb
projects/nrlm/references/: f1c_name_scraper.py
projects/pmgsy-lgd-mapping/: README.md  pyproject.toml
projects/pmgsy-lgd-mapping/notebooks/: lgd_map.ipynb
projects/pmgsy-lgd-mapping/references/: lgd_iterator.py  lgd_mapping.py
projects/retail-prices/: README.md  pyproject.toml
projects/retail_prices_report/: README.md  pyproject.toml
(+206 files in other folders)
