[tool.poetry]
name = "wasabi"
version = "0.1.0"
description = ""
authors = ["Surya Kandukuri"]
packages = [
    { include = "bipp" },
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.24.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"