[tool.poetry]
name = "bihar-nhb"
version = "0.1.0"
description = "From Bihar nhb pdf datasets to extract into csv files"
authors = ["Bhanvi"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
