[tool.poetry]
name = "cmie-consumer-pyramids"
version = "0.1.0"
description = "This project is dedicated towards wrangling CMIE consumer pyramids data for the INFUSION research project."
authors = ["Ewan Nikhil Thomas"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
