[tool.poetry]
name = "crop-diversification"
version = "0.1.0"
description = "exploratory data analysis for crop diversification"
authors = ["shahbaz nikhil shivani surya "]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
plotly = "^4.14.3"
matplotlib = "^3.4.2"
altair = "^4.1.0"
wheel = "^0.36.2"
gdal = {path = "geopandas-dependencies/GDAL-3.3.0-cp39-cp39-win_amd64.whl"}
pyproj = {path = "geopandas-dependencies/pyproj-3.1.0-cp39-cp39-win_amd64.whl"}
fiona = {path = "geopandas-dependencies/Fiona-1.8.20-cp39-cp39-win_amd64.whl"}
shapely = {path = "geopandas-dependencies/Shapely-1.7.1-cp39-cp39-win_amd64.whl"}
geopandas = {path = "geopandas-dependencies/geopandas-0.9.0-py3-none-any.whl"}
altair-viewer = "^0.3.0"
streamlit = "^0.83.0"
fuzzywuzzy = "^0.18.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
