[tool.poetry]
name = "Voting Behaviour"
version = "0.1.0"
description = "This repo contains the scrapper to get the form20 raw data and codes for further pdf parsing and data consolidation."
authors = ["Ewan thomas"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
