[tool.poetry]
name = "formal_employment"
version = "0.1.0"
description = "Employment related statistics published by MOSPI in monlthy P'Payroll Reporting in India' reports."
authors = ["Biky Roy, Vijay Kumar"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
