[tool.poetry]
name = "groundwater-data"
version = "0.1.0"
description = "ground water data"
authors = ["sara"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
