[tool.poetry]
name = "INFUSION"
version = "0.1.0"
description = "Land and Livestock data of sheep, cattle, pig, goat and buffalo population in 2019."
authors = ["Diya"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
ipykernel = "^6.13.0"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
