[tool.poetry]
name = "nrega-impact"
version = "0.1.0"
description = "This repo contains all the codes related to cleaning of Gram Panchayat level NREGA assets data"
authors = ["Ashwini, Surya, Ewan"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
ipykernel = "^6.8.0"
fuzzywuzzy = "^0.18.0"
fuzzymatcher = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
