[tool.poetry]
name = "infusion"
version = "0.1.0"
description = "nrlm f1b dataset related scrapers"
authors = ["shreya"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
