[tool.poetry]
name = "INFUSION"
version = "0.1.0"
description = "This repo contains the scraper of NRLM Farm Livelihoods data as part of the INFUSION project under BIPP."
authors = ["Ewan Nikhil Thomas"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"
lxml = "^4.8.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
xmltodict = "^0.13.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
wasabi = {path = "../../libs/wasabi"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
