[tool.poetry]
name = "nrlm-shg-f1b-mod"
version = "0.1.0"
description = "Refactoring the existing nrlm-shg-f1b code to make it more reuseable"
authors = ["Saurabh Harak,Harmanpreet Kaur,Ewan"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.4.0"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
