[tool.poetry]
name = "INFUSION"
version = "0.1.0"
description = "This contains scrapers for extracting the F1b report of NRLM SHGs as part of the INFUSION project. F1b report has information on revolving funds provided to SHGs at SHG level granularity."
authors = ["Shreya Gupta, Ewan Nikhil Thomas"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"
click = "^7.1.2"
pandas = "^1.0.5"
numpy = "^1.19.0"
selenium = "^4.7.2"
webdriver-manager = "^3.8.5"
lxml = "^4.9.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
