[tool.poetry]
name = "retail_prices_report"
version = "0.1.0"
description = "report of retail_prices date wise"
authors = ["Ujjawal"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
